[package]
name = "crossroad-wallet"
version = "0.0.1"
authors = ["y.popovych@crossroad.io"]
license = "GPL-3.0"
description = "Crossroad Wallet Implementation"
keywords = [ "Cardano", "Wallet", "Crossroad" ]

[dependencies]
cardano = { git = "https://github.com/input-output-hk/rust-cardano.git", optional = true, branch = "master" }
cryptoxide = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.9"

[dev-dependencies]
rand = "0.5"
unicode-normalization = "0.1"

[lib]
name = "crossroad_wallet"
path = "src/lib.rs"

[features]
# all networks by default
default = ["cardano", "ethereum", "custom-networks", "backup"]

# ethereum network
ethereum = []

# enables custom networks support
custom-networks = []

# enables backup methods
backup = []
