[package]
name = "crossroad-wallet"
version = "0.0.1"
authors = ["y.popovych@crossroad.io"]
license = "GPL-3.0"
description = "Crossroad Wallet Implementation"
keywords = [ "Cardano", "Wallet", "Crossroad" ]

[dependencies]
rand = { git = "https://github.com/rust-random/rand.git", branch = "master" }
cryptoxide = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.9"

[dev-dependencies]
unicode-normalization = "0.1"

[lib]
name = "crossroad_wallet"
path = "src/lib.rs"

[features]
# all networks by default
default = ["cardano", "ethereum", "bitcoin", "custom-networks", "backup"]

# cardano network
cardano = []

# ethereum network
ethereum = []

# bitcoin network
bitcoin = []

# enables custom networks support
custom-networks = []

# enables backup methods
backup = []
