[package]
name = "bip39"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Rust Bip39 mnemonic implementation"
keywords = [ "Bip39", "Mnemonic" ]

[dependencies]
cryptoxide = "0.1"
serde = { version = "1.0", optional = true}
serde_derive = { version = "1.0", optional = true}

[dev-dependencies]
unicode-normalization = "0.1"
rand_os = "0.2"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
default = []

# serialization
generic-serialization = ["serde", "serde_derive"]