[package]
name = "tesseract-keychain-c"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract Multi-Network Keychain C bindings"
keywords = [ "Wallet", "Tesseract", "Cardano", "Ethereum", "Bitcoin", "C" ]
build = "build.rs"

[dependencies]
tesseract-keychain = { path = "../keychain", default-features = false }
libc = "0.2"
num-traits = "0.2"

[build-dependencies]
cbindgen = "0.8"

[lib]
name = "rust_keychain"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[features]
# all networks by default
default = ["cardano", "ethereum", "bitcoin"]

# cardano network
cardano = ["tesseract-keychain/cardano"]

# ethereum network
ethereum = ["tesseract-keychain/ethereum"]

# bitcoin network
bitcoin = ["tesseract-keychain/bitcoin"]

# enables backup methods
backup = ["tesseract-keychain/backup"]