[package]
name = "tesseract-keychain-java"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract Multi-Network Keychain Java bindings"
keywords = [ "Wallet", "Tesseract", "Cardano", "Ethereum", "Bitcoin", "Java" ]
edition = "2018"

[lib]
name = "rust_keychain_java"
crate-type = ["cdylib"]

[dependencies]
tesseract-keychain = { path = "../keychain", default-features = false }
log = "0.4"
log-panics = "2.0"
jni = "0.15"
jni-sys = "0.3"
chrono = "0.4"
env_logger = "0.7"

[build-dependencies]
env_logger = "0.7"
log = "0.4"
bindgen = "0.53"
