[package]
name = "tesseract-keychain"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract Multi-Network Keychain Implementation"
keywords = [ "Wallet", "Tesseract", "Cardano", "Ethereum", "Bitcoin" ]

[dependencies]
rand = "0.6"
cryptoxide = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# cardano
ed25519-bip32 = { git = "https://github.com/input-output-hk/rust-cardano.git", branch = "master", optional = true }

# ethereum and bitcoin
libsecp256k1 = { version = "0.2", optional = true }
byteorder = { version = "1", optional = true }
num-bigint = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }
ripemd160 = { version = "0.8", optional = true }
lazy_static = { version = "1.3", optional = true }

[dev-dependencies]
unicode-normalization = "0.1"

[lib]
name = "keychain"
path = "src/lib.rs"

[features]
# all networks by default
default = ["cardano", "ethereum", "bitcoin"]

# cardano network
cardano = ["ed25519-bip32"]

# ethereum network
ethereum = ["libsecp256k1", "byteorder", "num-bigint", "num-traits", "ripemd160", "lazy_static"]

# bitcoin network
bitcoin = ["libsecp256k1", "byteorder", "num-bigint", "num-traits", "ripemd160", "lazy_static"]

# enables custom networks support
custom-networks = []

# enables backup methods
backup = []
