[package]
name = "tesseract-keychain"
version = "0.0.1"
authors = ["Tesseract Systems, Inc. <info@tesseract.one>"]
license = "Apache-2.0"
description = "Tesseract Multi-Network Keychain Implementation"
keywords = [ "Wallet", "Tesseract", "Cardano", "Ethereum", "Bitcoin" ]

[dependencies]
rand = "0.6"
cryptoxide = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

bip39 = { path = "../bip39" }

# cardano
ed25519-bip32 = { git = "https://github.com/input-output-hk/rust-cardano.git", branch = "master", optional = true }

# ethereum and bitcoin
secp256k1_bip32 = { path = "../secp256k1_bip32", optional = true }

[lib]
name = "keychain"
path = "src/lib.rs"

[features]
# all networks by default
default = ["cardano", "ethereum", "bitcoin"]

# cardano network
cardano = ["ed25519-bip32"]

# ethereum network
ethereum = ["secp256k1_bip32"]

# bitcoin network
bitcoin = ["secp256k1_bip32"]

# enables custom networks support
custom-networks = []

# enables backup methods
backup = []
